Bug 19116: SquirrelFish shouldn't regress on variable lookups <https://bugs.webkit.org/show_bug.cgi?id=19116>

Reviewed by Maciej

This restores multiscope optimisation to simple resolve, producing
a 2.6% progression in SunSpider.  Have verified that none of the
sites broken by the multiscope optimisation in trunk were effected
by this change.


git-svn-id: http://svn.webkit.org/repository/webkit/branches/squirrelfish@33958 268f45cc-cd09-0410-ab3c-d52691b4dbfc