JavaScriptCore/VM/Opcode.h
@@ -74,6 +74,8 @@ namespace KJS {
         macro(op_in) \
         \
         macro(op_resolve) \
+        macro(op_resolve_skip) \
+        macro(op_get_scoped_var) \
         macro(op_resolve_base) \
         macro(op_resolve_with_base) \
         macro(op_resolve_func) \
